# mesh2audio

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  karl_todo.md
app/: .gitignore  BuildApp  CMakeLists.txt  karl_notes.md
app/lib/: CMakeLists.txt
app/res/: CMakeLists.txt
app/res/shaders/: fragment.glsl  geometry.glsl  grid_lines_fragment.glsl  grid_lines_vertex.glsl  lines_geom.glsl  shadow_fragment.glsl  shadow_vertex.glsl  transform_vertex.glsl  translate_scale_vertex.glsl  vertex.glsl
app/script/: Build
app/src/: Audio.cpp  Audio.h  BellProfileGenerator.cpp  BellProfileGenerator.h  FaustParams.cpp  FaustParams.h  GLCanvas.cpp  GLCanvas.h  Geometry.cpp  Geometry.h  GlCanvas.cpp  GlCanvas.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshInstance.cpp  MeshInstance.h  MeshProfile.cpp  MeshProfile.h  Physics.cpp  Physics.h  RealImpact.cpp  RealImpact.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  State.h  Transform.h  Window.h  Worker.cpp  Worker.h  main.cpp  mesh.cpp  mesh.h  shaders.cpp  shaders.h  transform.cpp  transform.h
app/src/Geometry/: Arrow.cpp  ConvexHull.cpp  ConvexHull.h  GLBuffer.h  Geometry.cpp  Geometry.h  GeometryBuffers.h  GeometryData.h  GridLines.cpp  GridLines.h  MeshBuffers.cpp  MeshBuffers.h  TriangleBuffers.h
app/src/Geometry/Primitive/: Rect.cpp  Rect.h  Sphere.cpp  Sphere.h
app/src/Mesh/: InteractiveMesh.cpp  InteractiveMesh.h  Mesh.cpp  Mesh.h  MeshProfile.h
app/src/Shader/: Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h
fem/: CMakeLists.txt  build.sh  buildFem  fem  m_data_input_output.mod  m_global_parameters.mod  p_main  precmod.mod  stringmod.mod  strings.mod  test.mesh
fem/Notes/: modSimFEMNotes-blx.bib  modSimFEMNotes.aux  modSimFEMNotes.blg  modSimFEMNotes.run.xml  modSimFEMNotes.tex  modSimFEMNotes.toc  stiffnesMatrix.nb
fem/build-debug/: fem
fem/buildFem/: CMakeCache.txt
fem/src/: .gitignore  build.sh  buildingTestProblem.m  m_data_input_output.f90  m_finite_elements.f90  m_finite_elements.mod  m_global_parameters.f90  m_math.f90  m_math.mod  p_main.f90  precmod.f90  stringmod.f90
res/shaders/: fragment.glsl  grid_lines_fragment.glsl  lines_geom.glsl  silhouette_fragment.glsl  silhouette_geom.glsl  silhouette_vertex.glsl  transform_vertex.glsl  transform_vertex_lines.glsl
src/: Audio.cpp  Audio.h  FaustParams.cpp  GLCanvas.cpp  GLCanvas.h  Material.cpp  Material.h  Physics.cpp  Physics.h  Scene.cpp  Scene.h  Window.h  Worker.cpp  Worker.h  main.cpp
src/Geometry/: Arrow.cpp  Arrow.h  ConvexHull.cpp  ConvexHull.h  GLGeometry.cpp  GLGeometry.h  Geometry.cpp  Geometry.h  MeshBuffers.cpp  MeshBuffers.h  Silhouette.cpp  Silhouette.h  Wireframe.cpp  Wireframe.h
src/Geometry/Primitive/: Cuboid.cpp  Cuboid.h  Cylinder.cpp  Cylinder.h  Rect.cpp  Rect.h  Sphere.cpp  Sphere.h
src/Mesh/: InteractiveMesh.cpp  InteractiveMesh.h  Mesh.cpp  Mesh.h  MeshProfile.cpp
src/Shader/: Shader.cpp  ShaderProgram.cpp
